# pyclaw

./: .gitignore  GUIDE.md  README.md  config.yaml  pyproject.toml  requirements.md  requirements.txt
docs/: OPENCLAW_USECASES_ASSESSMENT.md
memory/: MEMORY.md  SOUL.md  USER.md
skills/finance/: SKILL.md
skills/weather/: SKILL.md
skills/web_search/: SKILL.md
src/: agent.py  agent_test.py  config.py  config_test.py  main.py  main_test.py  session.py  session_test.py
src/adapters/: base.py  registry.py  registry_test.py  terminal.py  terminal_test.py  whatsapp.py  whatsapp_test.py
src/heartbeat/: calendar.py  gmail.py  notifier.py  scheduler.py
src/memory/: chunker.py  chunker_test.py  embeddings.py  embeddings_test.py  manager.py  manager_test.py  schema.py  schema_test.py  search.py  search_test.py
src/skills/: loader.py  loader_test.py  types.py
tasks/: prd-pyclaw.md  tasks-pyclaw.md
tests/: test_heartbeat_integration.py  test_memory_integration.py  test_skills_integration.py  test_terminal_integration.py
